--- a/index.html
+++ b/index.html
@@ -306,10 +306,10 @@
     </div>
     <!-- About Section -->
     <section id="bap-about" class="block py-[50px]">
-      <div class="mx-auto w-full max-w-full px-[15px]">
+      <div class="container">
         <div class="main-about-content flex flex-col">
           <div class="bap-about-container">
-            <div class="-mx-[10px] flex flex-wrap items-center">
+            <div class="row items-center">
               <div class="relative w-full px-[10px]">
                 <h2 class="relative mb-[7.5px] flex text-2xl leading-[40px]">
                   <span
@@ -462,6 +462,308 @@
                 220
               </div>
               <p class="m-0 text-[13px] text-[#bcbaba]">Projects</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- Service Section -->
+    <section class="block bg-white py-[40px]" id="bap-service">
+      <div class="container">
+        <div class="row">
+          <div class="relative w-full px-[10px]">
+            <h2
+              class="relative mb-[7.5px] flex gap-[25px] text-2xl font-semibold leading-10 text-black"
+            >
+              <span
+                class="relative top-0 flex h-[56px] w-[50px] items-center justify-center bg-cover"
+                style="
+                  background-image: url(./public/assets/images/polygon-bg.png);
+                "
+                ><img
+                  src="./public/assets/images/question-icon.png"
+                  alt="question-icon"
+                  class="h-8 w-8 max-w-none object-cover"
+              /></span>
+              <span class="text-header-text"
+                >Tại sao khách hàng chọn BAP Software làm đối tác?</span
+              >
+            </h2>
+          </div>
+          <div class="relative w-full px-[10px]">
+            <div class="visible mt-[30px]">
+              <div class="main-reason">
+                <div class="item-reason text-left">
+                  <h4
+                    class="flex items-center py-[10px] text-[14px] font-[700] uppercase tracking-[-0.337647px] text-[#373737]"
+                  >
+                    <img
+                      src="./public/assets/images/person-icon.png"
+                      alt="person-icon"
+                      class="mr-[10px] w-[20px] max-w-full"
+                    />
+                    Con người
+                  </h4>
+                </div>
+                <div class="content-reason text-left">
+                  <ul>
+                    <li class="content-reason-item">
+                      Đội ngũ kỹ sư hiểu “chất lượng Nhật” với trên 8 năm kinh
+                      nghiệm làm việc tại các công ty lớn của Nhật.
+                    </li>
+                    <li class="content-reason-item">
+                      Có khả năng tham gia từ phân tích nghiệp vụ và các khâu
+                      phát triển sản phẩm đến vận hành hệ thống
+                    </li>
+                  </ul>
+                </div>
+              </div>
+              <div class="main-reason">
+                <div class="item-reason text-left">
+                  <h4
+                    class="flex items-center py-[10px] text-[14px] font-[700] uppercase tracking-[-0.337647px] text-[#373737]"
+                  >
+                    <img
+                      src="./public/assets/images/laptop-code-icon.png"
+                      alt="laptop-code"
+                      class="mr-[10px] w-[20px] max-w-full"
+                    />
+                    Công nghệ
+                  </h4>
+                </div>
+                <div class="content-reason text-left">
+                  <ul>
+                    <li class="content-reason-item">
+                      Sử dụng công nghệ mới nhất để tối ưu hiệu năng, tăng khả
+                      năng mở rộng, tối ưu hoá chi phí cho khách hàng.
+                    </li>
+                  </ul>
+                </div>
+              </div>
+              <div class="main-reason">
+                <div class="item-reason text-left">
+                  <h4
+                    class="flex items-center py-[10px] text-[14px] font-[700] uppercase tracking-[-0.337647px] text-[#373737]"
+                  >
+                    <img
+                      src="./public/assets/images/product-icon.png"
+                      alt="product-icon"
+                      class="mr-[10px] w-[20px] max-w-full"
+                    />
+                    Sản phẩm tạo ra
+                  </h4>
+                </div>
+                <div class="content-reason text-left">
+                  <ul>
+                    <li class="content-reason-item">
+                      Tinh thần Omotenashi và Kodawari về chất lượng sản phẩm
+                      được thể hiện từ bước tư vấn sản phẩm cho khách hàng đến
+                      khi vận hành hệ thống.
+                    </li>
+                    <li class="content-reason-item">
+                      Bản thân BAP đã và đang tạo ra nhiều sản phẩm của riêng
+                      mình trong cộng đồng startup Việt Nam, từ đó có thể tư vấn
+                      hiệu quả hơn cho khách hàng.
+                    </li>
+                  </ul>
+                </div>
+              </div>
+              <div class="main-reason">
+                <div class="item-reason text-left">
+                  <h4
+                    class="flex items-center py-[10px] text-[14px] font-[700] uppercase tracking-[-0.337647px] text-[#373737]"
+                  >
+                    <img
+                      src="./public/assets/images/globe-icon.png"
+                      alt="globe-icon"
+                      class="mr-[10px] w-[20px] max-w-full"
+                    />
+                    Quy mô
+                  </h4>
+                </div>
+                <div class="content-reason text-left">
+                  <ul>
+                    <li class="content-reason-item">
+                      Hơn 320 kỹ sư, 5 văn phòng với nhiều chứng chỉ về chất
+                      lượng ISO 9001, về bảo mật thông tin ISO 27001
+                    </li>
+                    <li class="content-reason-item">
+                      TOP 20 Việt Nam thương hiệu vàng được người dùng tín nhiệm
+                      về chất lượng sản phẩm năm 2020
+                    </li>
+                    <li class="content-reason-item">
+                      TOP 10 ICT Việt Nam năm 2020, 2021 . Top 10 Doanh nghiệp
+                      ICT doanh thu ấn tượng nhất 2021
+                    </li>
+                  </ul>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="relative w-full px-[10px]">
+            <div class="visible mt-[30px] w-full max-w-[960px]">
+              <div class="row offshore-list">
+                <div class="offshore-list-col" id="block-left">
+                  <ul class="row m-0 p-0">
+                    <li class="relative w-full max-w-full px-[10px] py-[20px]">
+                      <a
+                        href="/"
+                        class="bg-transparent text-[#007bff] duration-200"
+                      >
+                        <div class="offshore-list-item hover-zoom select-none">
+                          <div class="item-thumb">
+                            <img
+                              src="./public/assets/images/system-icon.png"
+                              alt="system-icon"
+                            />
+                          </div>
+                          <div class="item-content">Outsystems</div>
+                        </div>
+                      </a>
+                    </li>
+                    <li class="relative w-full max-w-full px-[10px] py-[20px]">
+                      <a
+                        href="/"
+                        class="bg-transparent text-[#007bff] duration-200"
+                      >
+                        <div class="offshore-list-item hover-zoom select-none">
+                          <div class="item-thumb">
+                            <img
+                              src="./public/assets/images/bitcoin-icon.png"
+                              alt="bitcoin-icon"
+                            />
+                          </div>
+                          <div class="item-content">Blockchain</div>
+                        </div>
+                      </a>
+                    </li>
+                    <li class="relative w-full max-w-full px-[10px] py-[20px]">
+                      <a
+                        href="/"
+                        class="bg-transparent text-[#007bff] duration-200"
+                      >
+                        <div class="offshore-list-item hover-zoom select-none">
+                          <div class="item-thumb">
+                            <img
+                              src="./public/assets/images/ai-icon.png"
+                              alt="ai-icon"
+                            />
+                          </div>
+                          <div class="item-content">AI/IOT</div>
+                        </div>
+                      </a>
+                    </li>
+                    <li class="relative w-full max-w-full px-[10px] py-[20px]">
+                      <a
+                        href="/"
+                        class="bg-transparent text-[#007bff] duration-200"
+                      >
+                        <div class="offshore-list-item hover-zoom select-none">
+                          <div class="item-thumb">
+                            <img
+                              src="./public/assets/images/cloud-icon.png"
+                              alt="cloud-icon"
+                            />
+                          </div>
+                          <div class="item-content">SAP/ERP</div>
+                        </div>
+                      </a>
+                    </li>
+                  </ul>
+                </div>
+                <div id="center-main-block" class="offshore-list-col">
+                  <ul class="row m-0 w-full justify-center p-0">
+                    <li
+                      id="main-block"
+                      class="relative w-full max-w-full py-[20px] px-[10px]"
+                    >
+                      <a href="/">
+                        <div
+                          class="hover-zoom block min-h-[100px] rounded-[10px] border-[0.75px] border-solid border-[#e7f2ff] bg-[#3D90FD] py-[24px] px-[15px] text-center shadow-servicebox transition-all duration-300 ease-in-out"
+                        >
+                          <div class="item-thumb w-full">
+                            <img
+                              src="./public/assets/images/offshore-icon.png"
+                              alt="offshore-icon"
+                            />
+                          </div>
+                          <div class="item-content">Phát triển Offshore</div>
+                        </div>
+                      </a>
+                    </li>
+                  </ul>
+                </div>
+                <div class="offshore-list-col" id="block-right">
+                  <ul class="row m-0 p-0">
+                    <li class="relative w-full max-w-full px-[10px] py-[20px]">
+                      <a
+                        href="/"
+                        class="bg-transparent text-[#007bff] duration-200"
+                      >
+                        <div class="offshore-list-item hover-zoom select-none">
+                          <div class="item-thumb">
+                            <img
+                              src="./public/assets/images/mobile-icon.png"
+                              alt="mobile-icon"
+                            />
+                          </div>
+                          <div class="item-content">
+                            WEBSITE /SMARTPHONE APP
+                          </div>
+                        </div>
+                      </a>
+                    </li>
+                    <li class="relative w-full max-w-full px-[10px] py-[20px]">
+                      <a
+                        href="/"
+                        class="bg-transparent text-[#007bff] duration-200"
+                      >
+                        <div class="offshore-list-item hover-zoom select-none">
+                          <div class="item-thumb">
+                            <img
+                              src="./public/assets/images/stock-icon.png"
+                              alt="stock-icon"
+                            />
+                          </div>
+                          <div class="item-content">BUSINESS APPLICATION</div>
+                        </div>
+                      </a>
+                    </li>
+                    <li class="relative w-full max-w-full px-[10px] py-[20px]">
+                      <a
+                        href="/"
+                        class="bg-transparent text-[#007bff] duration-200"
+                      >
+                        <div class="offshore-list-item hover-zoom select-none">
+                          <div class="item-thumb">
+                            <img
+                              src="./public/assets/images/bigdata-icon.png"
+                              alt="bigdata-icon"
+                            />
+                          </div>
+                          <div class="item-content">BIGDATA</div>
+                        </div>
+                      </a>
+                    </li>
+                    <li class="relative w-full max-w-full px-[10px] py-[20px]">
+                      <a
+                        href="/"
+                        class="bg-transparent text-[#007bff] duration-200"
+                      >
+                        <div class="offshore-list-item hover-zoom select-none">
+                          <div class="item-thumb">
+                            <img
+                              src="./public/assets/images/game-icon.png"
+                              alt="game-icon"
+                            />
+                          </div>
+                          <div class="item-content">TRÒ CHƠI</div>
+                        </div>
+                      </a>
+                    </li>
+                  </ul>
+                </div>
+              </div>
             </div>
           </div>
         </div>
