feat: complete product, partner, clients part on mobile version

--- a/index.html
+++ b/index.html
@@ -472,14 +472,8 @@
       <div class="container">
         <div class="row">
           <div class="relative w-full px-[10px]">
-            <h2
-              class="relative mb-[7.5px] flex gap-[25px] text-2xl font-semibold leading-10 text-black"
-            >
-              <span
-                class="relative top-0 flex h-[56px] w-[50px] items-center justify-center bg-cover"
-                style="
-                  background-image: url(./public/assets/images/polygon-bg.png);
-                "
+            <h2 class="text-header">
+              <span class="text-header-icon"
                 ><img
                   src="./public/assets/images/question-icon.png"
                   alt="question-icon"
@@ -767,6 +761,123 @@
             </div>
           </div>
         </div>
+      </div>
+    </section>
+    <!-- Product Section  -->
+    <section class="block bg-[#f7fafc] py-[40px]">
+      <div class="container">
+        <h2 class="text-header">
+          <span class="text-header-icon"
+            ><img
+              src="./public/assets/images/cup-icon.png"
+              alt="question-icon"
+              class="h-8 w-8 max-w-none object-cover"
+          /></span>
+          <div class="flex w-[calc(100%-75px)] flex-col">
+            <span class="text-header-text">Dự án thực tế</span>
+            <p
+              class="my-4 text-[14px] font-normal leading-[25px] text-[#6f6f6f]"
+            >
+              Tại BAP, chúng tôi không ngừng học hỏi, cập nhật, chia sẻ kiến
+              thức từ những thông tin về dịch vụ Offshore cũng như những xu
+              hướng công nghệ mới nhất.
+            </p>
+          </div>
+        </h2>
+      </div>
+    </section>
+    <!-- Partnert Section -->
+    <section class="block bg-white pb-0 pt-[50px]">
+      <div class="container">
+        <div class="mb-[30px]">
+          <h2 class="text-header">
+            <span class="text-header-icon"
+              ><img
+                src="./public/assets/images/white-handshake-icon.png"
+                alt="white-handshake-icon-icon"
+                class="h-8 w-8 max-w-none object-cover"
+            /></span>
+            <div class="flex w-[calc(100%-75px)] flex-col">
+              <span class="text-header-text w-full">Khách hàng tiêu biểu</span>
+              <p
+                class="my-4 text-[14px] font-normal leading-[25px] text-[#6f6f6f]"
+              >
+                Đa dạng về quy mô và loại hình kinh doanh, đã có hơn 100 khách
+                hàng trở thành đối tác của BAP.
+              </p>
+            </div>
+          </h2>
+        </div>
+      </div>
+    </section>
+    <!-- Clients Section  -->
+    <section class="client-recomments">
+      <div class="container">
+        <ul class="lists-recomments flex flex-col gap-4">
+          <li class="customer-items">
+            <div
+              class="recomment-items mx-auto w-full rounded-[10px] bg-[#0782ed] p-5"
+            >
+              <div class="client-name text-center">
+                <img
+                  src="./public/assets/images/mediotec-director.jpg"
+                  class="mx-auto h-[120px] w-[120px] max-w-full rounded-[50%] object-cover"
+                />
+                <p class="mt-1 mb-[15px] text-[18px] text-white">
+                  Mediotec Co.,Ltd Matsumoto Hidemori CEO
+                </p>
+              </div>
+              <h4
+                class="mb-[7.5px] text-[19px] font-light leading-[1.2] text-white"
+              >
+                BAP thật sự đã xây dựng được một thể chế mà có thể uyển chuyển
+                đối ứng tốt với các vấn đề của việc phát triển offshore
+              </h4>
+            </div>
+          </li>
+          <li class="customer-items">
+            <div
+              class="recomment-items mx-auto w-full rounded-[10px] bg-[#0782ed] p-5"
+            >
+              <div class="client-name text-center">
+                <img
+                  src="./public/assets/images/ogawa-1.jpg"
+                  class="mx-auto h-[120px] w-[120px] max-w-full rounded-[50%] object-cover"
+                />
+                <p class="mt-1 mb-[15px] text-[18px] text-white">
+                  Mr. Ogawa - Trợ lý Giám đốc, Tập đoàn NTT DATA NJK
+                </p>
+              </div>
+              <h4
+                class="mb-[7.5px] text-[19px] font-light leading-[1.2] text-white"
+              >
+                Chỉ có thể là BAP. Tôi đã có 1 comtor tuyệt vời và 1 đội phản
+                hồi rất nhanh.
+              </h4>
+            </div>
+          </li>
+          <li class="customer-items">
+            <div
+              class="recomment-items mx-auto w-full rounded-[10px] bg-[#0782ed] p-5"
+            >
+              <div class="client-name text-center">
+                <img
+                  src="./public/assets/images/mr-sugimoto-1.jpg"
+                  class="mx-auto h-[120px] w-[120px] max-w-full rounded-[50%] object-cover"
+                />
+                <p class="mt-1 mb-[15px] text-[18px] text-white">
+                  Mr. Sugimoto - Phó Quản lý, Tập đoàn iXIT
+                </p>
+              </div>
+              <h4
+                class="mb-[7.5px] text-[19px] font-light leading-[1.2] text-white"
+              >
+                Hiệu suất công việc luôn cao hơn chúng tôi yêu cầu, đó là lý do
+                chúng tôi chọn BAP.
+              </h4>
+            </div>
+          </li>
+        </ul>
       </div>
     </section>
     <script src="./public/scripts/index.js" defer></script>
