feat: complete offshore part on mobile version

--- a/index.html
+++ b/index.html
@@ -880,6 +880,72 @@
         </ul>
       </div>
     </section>
+    <!-- Offshore Section -->
+    <section class="offshore-section block py-10">
+      <div class="container">
+        <div class="mb-[30px]">
+          <h2 class="text-header">
+            <span class="text-header-icon"
+              ><img
+                src="./public/assets/images/white-offshore-icon.png"
+                alt="white-offshore-icon"
+                class="h-8 w-8 max-w-none object-cover"
+            /></span>
+            <span class="text-header-text"
+              >Lợi ích và bất lợi khi dùng nhân lực bên ngoài</span
+            >
+          </h2>
+        </div>
+        <div class="row">
+          <div class="relative w-full px-[10px]">
+            <div class="main-block relative">
+              <div class="item-nomal advance-block relative mb-[100px]">
+                <h4 class="bg-[#0383ed] text-white">Thuận lợi</h4>
+                <ul class="my-[15px] pl-5">
+                  <li>Chí phí giảm gần ½</li>
+                  <li>Nguồn nhân lực dồi dào</li>
+                  <li>Tiếp cận các công nghệ mới nhanh</li>
+                  <li>Chủ động nguồn tài chính, tăng giảm nhân sự dễ dàng</li>
+                  <li>Tạo nguồn sinh khí mới cho công ty</li>
+                </ul>
+              </div>
+              <div class="item-nomal disadvance-block relative">
+                <h4 class="bg-[rgba(255,196,192,.18)] text-[#ff564d]">
+                  Bất lợi
+                </h4>
+                <ul class="my-[15px] pl-5">
+                  <li>
+                    Mất thời gian giao tiếp khi nhân lực không ở cùng trong một
+                    công ty → ở BAP được giải quyết bằng cách các yêu cầu ban
+                    đầu về dự án được thực hiện trực tiếp tại công ty khách hàng
+                  </li>
+                </ul>
+              </div>
+            </div>
+          </div>
+          <div class="relative w-full px-[10px]">
+            <div class="plus-icon grid w-full py-[40px] text-center">
+              <img
+                src="./public/assets/images/plus-icon.png"
+                alt="plus-icon"
+                class="my-[15px] mx-auto max-w-full"
+              />
+              <ul class="mb-[15px]">
+                <li class="mb-[5px] text-[11px]">
+                  Kinh nghiệm phát triển của BAP
+                </li>
+              </ul>
+            </div>
+          </div>
+          <div class="relative w-full px-[10px]">
+            <img
+              src="./public/assets/images/be-advance-partner.png"
+              class="max-w-full"
+            />
+          </div>
+        </div>
+      </div>
+    </section>
     <script src="./public/scripts/index.js" defer></script>
   </body>
 </html>
