feat: complete service product part on mobile version

--- a/index.html
+++ b/index.html
@@ -946,6 +946,30 @@
         </div>
       </div>
     </section>
+    <!-- Service Product Section -->
+    <section class="service-product block bg-white py-[50px]">
+      <div class="container">
+        <h2 class="text-header">
+          <span class="text-header-icon"
+            ><img
+              src="./public/assets/images/white-www-icon.png"
+              alt="white-www-icon-icon"
+              class="h-8 w-8 max-w-none object-cover"
+          /></span>
+          <div class="flex w-[calc(100%-75px)] flex-col">
+            <span class="text-header-text w-full"
+              >Sản phẩm startup công nghệ của BAP</span
+            >
+            <p
+              class="my-4 text-[14px] font-normal leading-[25px] text-[#6f6f6f]"
+            >
+              Hơn thế nữa, BAP cũng phát triển các sản phẩm Start-up của riêng
+              mình, làm phong phú kinh nghiệm thực tiễn.
+            </p>
+          </div>
+        </h2>
+      </div>
+    </section>
     <script src="./public/scripts/index.js" defer></script>
   </body>
 </html>
