feat: complete electron part in desktop version

--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@
       <div class="bap-intro-slider">
         <div class="container">
           <div class="row">
-            <div class="bap-intro-left">
+            <div class="bap-intro-left col-lg-6">
               <div class="max-lg:w-full">
                 <h1 class="web-title">Xin chào!</h1>
                 <h2 class="web-desc">
@@ -261,6 +261,62 @@
                     class="btn btn-primary inline-block rounded-[40px] py-[11.25px] px-[30px] leading-[26.25px] tracking-normal"
                     >Liên hệ với chúng tôi</a
                   >
+                </div>
+              </div>
+            </div>
+            <div class="bap-electron col-lg-6">
+              <div class="bap-intro-right">
+                <div class="bap-intro-right-inner">
+                  <div class="bap-list-services">
+                    <div class="cicle-wave-1"></div>
+                    <div class="list-services-item-center">
+                      <div class="list-services-item item-0">
+                        <a href="/">
+                          <img src="./public/assets/images/Group-30.png" />
+                          <span class="title-icon">Tại sao chọn BAP?</span>
+                        </a>
+                      </div>
+                    </div>
+                    <div class="list-services-item item-1">
+                      <a href="#bap-event"></a>
+                    </div>
+                    <div class="list-services-item item-2">
+                      <a href="#bap-offshore">
+                        <img
+                          src="./public/assets/images/Combined-Shape-3.png"
+                        />
+                        <span class="title-icon">Vì sao Offshore?</span>
+                      </a>
+                    </div>
+                    <div class="list-services-item item-3">
+                      <a href="#bapachievement" title="Dự án thực tế">
+                        <img
+                          src="./public/assets/images/Combined-Shape-4.png"
+                        />
+                        <span class="title-icon">Dự án thực tế</span>
+                      </a>
+                    </div>
+                    <div class="list-services-item item-5">
+                      <a href="#bapcommitment" title="Thành viên"> </a>
+                    </div>
+                    <div class="list-services-item item-6">
+                      <a href="#bapservice" title="Dịch vụ">
+                        <img src="./public/assets/images/Own-sevice.png" />
+                        <span class="title-icon">Dịch vụ</span>
+                      </a>
+                    </div>
+                    <div class="list-services-item item-7">
+                      <a href="#bappartner" title="Đối tác">
+                        <img src="./public/assets/images/Group-38.png" />
+                        <span class="title-icon">Đối tác</span>
+                      </a>
+                    </div>
+                    <div class="circle-spin">
+                      <img
+                        src="./public/assets/images/list-services-circle.png"
+                      />
+                    </div>
+                  </div>
                 </div>
               </div>
             </div>
