update: responsive about section

--- a/index.html
+++ b/index.html
@@ -356,20 +356,14 @@
       <!-- About Section -->
       <section id="bap-about" class="block py-[50px]">
         <div class="container">
-          <div class="main-about-content flex flex-col">
+          <div class="main-about-content">
             <div class="bap-about-container">
               <div class="row items-center">
                 <div class="relative w-full px-[10px]">
-                  <h2 class="relative mb-[7.5px] flex text-2xl leading-[40px]">
-                    <span
-                      class="inline-block w-full pt-[7px] text-left font-medium leading-[30px] text-[#000]"
-                    >
-                      Về chúng tôi
-                    </span>
+                  <h2 class="text-header">
+                    <span class="text-header-text"> Về chúng tôi </span>
                   </h2>
-                  <div
-                    class="mt-[30px] flex flex-col gap-[15px] text-left text-[13px] leading-[1.7] text-[#767676]"
-                  >
+                  <div class="text-description">
                     <p>
                       BAP Group với tầm nhìn “Contribute innovation to the
                       world”, tên viết tắt của Be Advanced Partner có nghĩa là “
@@ -393,7 +387,7 @@
                       thuẫn bởi BAP Ventures - quỹ đầu tư của BAP Group.
                     </p>
                   </div>
-                  <div class="mt-[30px] flex flex-col gap-[10px] text-center">
+                  <div class="btn-container">
                     <a href="/" class="btn-primary btn">Thông tin công ty</a>
                     <a href="/" class="btn btn-outline"
                       >Tải xuống hồ sơ năng lực của BAP</a
@@ -417,14 +411,12 @@
               />
             </video>
           </div>
-          <div
-            class="grid grid-cols-2 items-center justify-center gap-[25px] rounded border-[0.7px] border-solid border-[#f7fafc] bg-white p-[10px] shadow-achievement"
-          >
+          <div class="bap-achievement-list">
             <div class="bap-achievement">
               <img
                 src="./public/assets/images/iso-certified.png"
                 alt="iso-certified"
-                class="w-1/2 max-w-full"
+                class="iso"
               />
             </div>
             <div class="bap-achievement h-full gap-2">
