fix: fix container's css

--- a/index.html
+++ b/index.html
@@ -516,7 +516,7 @@
       <section class="block bg-white py-[40px]" id="bap-service">
         <div class="container">
           <div class="row">
-            <div class="container">
+            <div class="relative w-full px-[10px] lg:px-[15px]">
               <h2 class="text-header">
                 <span class="text-header-icon"
                   ><img
@@ -529,7 +529,7 @@
                 >
               </h2>
             </div>
-            <div class="col-lg-5 container">
+            <div class="col-lg-5 relative w-full px-[10px] lg:px-[15px]">
               <div class="visible mt-[30px]">
                 <div class="main-reason">
                   <div class="item-reason text-left">
@@ -639,7 +639,7 @@
                 </div>
               </div>
             </div>
-            <div class="col-lg-7 container">
+            <div class="col-lg-7 relative w-full px-[10px] lg:px-[15px]">
               <div class="visible mt-[30px] w-full max-w-[960px]">
                 <div class="row offshore-list">
                   <div class="offshore-list-col" id="block-left">
